--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "dependencies": {
     "hoist-non-react-statics": "^3.0.1",
     "react-native-iphone-x-helper": "^1.2.0",
-    "react-native-swipe-gestures": "^1.0.2"
+    "react-native-swipe-gestures": "glepur/react-native-swipe-gestures"
   },
   "devDependencies": {
     "eslint": "^4.18.2",
